--- a/camera_ready/appendix.tex
+++ b/camera_ready/appendix.tex
@@ -16,6 +16,7 @@ where $f^d_\tau$ is the sampled-time abstraction of the following continuous dyn
 		u_1sin(x_3)\\
 		u_2
 	\end{bmatrix}.
+\vspace{-.55mm}
 \end{equation*}
 where $x_1$ and $x_2$ denote the drone's position in two-dimensional space, $x_3$ denotes the rotational angle, and $u_1$ and $u_2$ represent control inputs for each drone. Choosing a sampling time $\tau=0.1$ s, the nominal dynamics $f^d_\tau$ can be characterized uniquely. 
 We consider state and input spaces to be $X=[-1,11]^2\times[-2,3.3]$ and $U=[-2.4,2.4]^2$, respectively. 
