modified:   experiments.tex 	modified:   intro.tex

--- a/camera_ready/intro.tex
+++ b/camera_ready/intro.tex
@@ -87,7 +87,7 @@ SCOTS implements a highly parallelizable ABCD algorithm that generates a feedbac
 We empirically evaluate \tool on a number of multi-robot benchmarks, including 
 a coordinated reach-avoid problem for ground robots, 
 a formation control problem for drones, and 
-a lane merging schenario for autonomous vehicles.
+a lane merging scenario for autonomous vehicles.
 In each case, we demonstrate that \tool can find decentralized and correct controllers within reasonable
 time and memory bounds.
 
