table 1 is modified

--- a/camera_ready/related_work.tex
+++ b/camera_ready/related_work.tex
@@ -56,33 +56,30 @@ There are methods which do not consider external disturbances and do not provide
 	\setlength{\tabcolsep}{0.7em} % for the horizontal padding
 	%\resizebox{1\columnwidth}{!}{
 	\begin{tabular}{l 
-							>{\centering}m{5mm}
-							>{\centering}m{5mm} 
-							>{\centering}m{5mm}	
-							>{\centering\arraybackslash}m{5mm}}
+							>{\centering}m{10mm}
+							>{\centering}m{10mm} 
+							>{\centering\arraybackslash}m{10mm}}
 		\toprule
 		Tool name &
-		\rotatebox{90}{Non-linear Dynamics} & \rotatebox{90}{Formal Guarantee} & \rotatebox{90}{Multi-agent} & \rotatebox{90}{Decentralized Controllers}\\
+		\rotatebox{90}{Non-linear Dynamics} & \rotatebox{90}{Formal Guarantee} &  \rotatebox{90}{Decentralized Controllers}\\
 		\hline
-		\rowcolor{black!20} \tool  & \ding{51} &\ding{51} & \ding{51} &  \ding{51}\\
+		\rowcolor{black!20} \tool  & \ding{51} &\ding{51} & \ding{51} \\
 		\hline
-		SCOTS \cite{Rungger2016scots}	&	\ding{51}	&	\ding{51}		&		&	\\
+		SCOTS \cite{Rungger2016scots}	&	\ding{51}	&	\ding{51}		&		\\
 		\hline
-		ALTRO \cite{howell2019altro}		&	\ding{51}	&	&	&\\
+		ALTRO \cite{howell2019altro}		&	\ding{51}	&	&\\
 		\hline
-		FastTrack \cite{herbert2017fastrack}& \ding{51} & \ding{51} &   &   \\
+		FastTrack \cite{herbert2017fastrack}& \ding{51} & \ding{51} & \\
 		\hline
-		RealSyn \cite{fan2018controller}& &\ding{51} &  &  \\
+		RealSyn \cite{fan2018controller}& &\ding{51} &  \\
 		\hline
-		Factest \cite{fan2020fast}& \ding{51} &  &  &  \\
+		Factest \cite{fan2020fast}& \ding{51} &  & \\
 		\hline
-		Model mismatch (SOS) \cite{singh2018robust}  & \ding{51} &  &  &  \\
+		Model mismatch (SOS) \cite{singh2018robust}  & \ding{51} &  &   \\
 		\hline
-		RTD \cite{kousik2020bridging} & \ding{51} & \ding{51} &  &  \\
+		RTD \cite{kousik2020bridging} & \ding{51} &   & \\
 		\hline
-		Fly-by-Logic \cite{Pant2018multiquad}  & \ding{51} & & \ding{51} & \ding{51} \\
-		\hline
-		Distributed team lift \cite{jackson2020scalable} & \ding{51} &  & \ding{51} &  \\
+		Fly-by-Logic \cite{Pant2018multiquad}  & \ding{51} & & \ding{51}  \\
 		\bottomrule
 	\end{tabular}
 \end{table}
